# swastha-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  hello.py  pyproject.toml
app/: main.py
app/__test__/: test_health_check.py
app/config/: database.py  env.py
